# five-ws-one-h-api

./: Dockerfile  Makefile  app.py  pyproject.toml
five_ws_one_h_api/: __init__.py  config.py
five_ws_one_h_api/application/unidic2ud/: views.py
five_ws_one_h_api/application/v0/: views.py
five_ws_one_h_api/five_ws_one_h/: __init__.py
five_ws_one_h_api/five_ws_one_h/unidic2ud/: __init__.py
tests/: __init__.py
